tests/rascal/negative/name_errors/L2/7_undecl-for3.ob
MODULE Bla;
VAR
  x, y: INTEGER;


BEGIN
  FOR x := y TO z DO
    x := 1
  END
END Bla.